[package]
name = "keen_batch"
version = "0.2.0"
authors = ["Young Wu <doomsplayer@gmail.com>"]

[lib]
name = "keen_batch"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
lazy_static = "^0.2.1"
chrono = "0.2"
rustler_codegen = { git = "https://github.com/hansihe/rustler.git" }
rustler = { git = "https://github.com/doomsplayer/rustler.git" }

[dependencies.keenio-batch]
git = "https://github.com/doomsplayer/keenio-batch.git"
